# InviZible

./: .gitmodules  ChangeLog.md  Push origin upstream tags  README.md  build.gradle  gradle.properties  settings.gradle
tordnscrypt/: CMakeLists.txt  build.gradle  owner.gradle  proguard-rules.pro
tordnscrypt/libs/: .gitignore  build  prebuild
tordnscrypt/src/beta/res/values/: encoded.xml
tordnscrypt/src/debug/: AndroidManifest.xml
tordnscrypt/src/fdroid/: AndroidManifest.xml
tordnscrypt/src/fdroid/res/values/: encoded.xml
tordnscrypt/src/google_play/: AndroidManifest.xml
tordnscrypt/src/google_play/res/values/: encoded.xml
tordnscrypt/src/lite/res/menu/: activity_main_drawer.xml
tordnscrypt/src/lite/res/values/: encoded.xml  ic_launcher_background.xml
tordnscrypt/src/lite/res/xml/: preferences_fast.xml
tordnscrypt/src/main/: AndroidManifest.xml
tordnscrypt/src/main/jni/invizible/: dhcp.c  dns.c  icmp.c  invizible.c  invizible.h  ip.c  neon2sse.h  session.c  tcp.c  udp.c  util.c
tordnscrypt/src/main/res/drawable/: alert_dialog_custom.xml  background_10dp_padding.xml  button_item_selector.xml  button_main_border.xml  button_main_selector.xml  button_main_selector_active.xml  button_start_firewall_selector.xml  button_start_selector.xml  chip_firewall_selector.xml  custom_border.xml  error_hint_selector.xml  ic_arp_attack_notification.xml  ic_attach_money_black_24dp.xml  ic_aux_notification.xml  ic_baseline_close_24.xml  ic_baseline_refresh_24.xml  ic_dns_tile.xml  ic_done_all_white_24dp.xml  ic_done_white_24dp.xml  ic_enter_black_24dp.xml  ic_firewall_active_menu.xml  ic_firewall_gsm_24.xml  ic_firewall_gsm_green_24.xml  ic_firewall_lan.xml  ic_firewall_lan_green.xml  ic_firewall_menu.xml  ic_firewall_roaming_24.xml  ic_firewall_roaming_green_24.xml  ic_firewall_vpn_key_24.xml  ic_firewall_vpn_key_green_24.xml  ic_firewall_wifi_24.xml  ic_firewall_wifi_green_24.xml  ic_help_black_24dp.xml  ic_i2p_tile.xml  ic_ip_tile.xml  ic_lock_open_white_24dp.xml  ic_lock_outline_blue_24dp.xml  ic_lock_white_24dp.xml  ic_outline_check_box_24.xml  ic_outline_check_box_outline_blank_24.xml  (+18 more)
tordnscrypt/src/main/res/drawable-anydpi-v23/: ic_close_white.xml  ic_done_white.xml
tordnscrypt/src/main/res/drawable-night/: side_nav_bar.xml
tordnscrypt/src/main/res/layout/: activity_about.xml  activity_backup.xml  activity_help.xml  activity_main.xml  activity_settings.xml  add_own_server.xml  agreement_layout.xml  app_bar_main.xml  app_bar_main_alt.xml  content_main.xml  content_main_alt.xml  content_settings.xml  dialog_import_dnscrypt_rules.xml  edit_text_for_dialog.xml  fragment_backup.xml  fragment_config_editor.xml  fragment_country_select.xml  fragment_dns_rule.xml  fragment_dnscrypt_run.xml  fragment_firewall.xml  fragment_itpd_run.xml  fragment_itpd_subscription.xml  fragment_preferences_dnscrypt_relays.xml  fragment_preferences_dnscrypt_servers_rv.xml  (+28 more)
tordnscrypt/src/main/res/layout-land/: app_bar_main.xml  content_main.xml  content_main_alt.xml  fragment_dnscrypt_run.xml  fragment_itpd_run.xml  fragment_tor_run.xml
tordnscrypt/src/main/res/layout-v21/: main_fragment.xml
(+921 files in other folders)
